test/distributions/block/emptyBbox.good
emptyBbox.chpl:4: error: halt reached - The boundingBox argument to Block() must be non-empty
